fix: Adjust submenu gap

--- a/web/css/contact.css
+++ b/web/css/contact.css
@@ -173,6 +173,11 @@ textarea::placeholder {
     gap: var(--row-list-img-three);
 }
 
+input:focus,
+textarea:focus {
+    outline: none;
+}
+
 @media screen and (max-width: 1100px) {
     .barnd-promise>div {
         top: 50px;
